# cookiecutter-python

./: LICENSE  LICENSE.txt  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/: labels.yml
{{cookiecutter.project_name}}/docs/source/: conf.py
{{cookiecutter.project_name}}/docs/sources/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: default.py
{{cookiecutter.project_name}}/tests/: test_add_one.py  test_dummy.py
